--- a/android/WinIt/res/layout/trading_promotion_activity.xml
+++ b/android/WinIt/res/layout/trading_promotion_activity.xml
@@ -15,11 +15,9 @@
         <ImageView
             android:id="@+id/image_view_trading"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:contentDescription="Promotion_image"
-            android:paddingTop="15dp"
-            android:scaleType="fitCenter"
-            android:src="@drawable/abs__ab_bottom_solid_dark_holo" />
+            android:layout_height="150dp"
+            android:contentDescription=""
+            android:scaleType="centerCrop" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -32,11 +30,42 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginBottom="@dimen/gap"
-                android:layout_marginTop="@dimen/gap"
+                android:fontFamily="sans-serif-light"
                 android:text="Name"
-                android:textSize="22sp"
+                android:textSize="26sp"
                 android:textStyle="bold" />
+
+            <View
+                android:id="@+id/separator"
+                android:layout_width="fill_parent"
+                android:layout_height="2dp"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp"
+                android:background="@color/dark_gray" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:padding="@dimen/gap" >
+
+                <TextView
+                    android:id="@+id/owner_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="@dimen/gap"
+                    android:text="Owner:"
+                    android:textAllCaps="true"
+                    android:textSize="14sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/owner_name_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Lorem"
+                    android:textSize="14sp" />
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/description_text_trading"
@@ -44,43 +73,7 @@
                 android:layout_height="wrap_content"
                 android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nibh diam, accumsan a eleifend eget, adipiscing vel eros. Proin in erat vitae lorem malesuada imperdiet. Nam eu mi sapien, sed blandit ligula. Donec luctus elit a purus viverra bibendum."
                 android:textSize="14sp" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:padding="@dimen/gap" >
-
-                <TextView
-                    android:id="@+id/owner_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="left"
-                    android:text="Owner: "
-                    android:textSize="20sp"
-                    android:textColor="@color/black" />
-                
-                <TextView
-                    android:id="@+id/owner_name_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Lorem"
-                    android:textSize="20sp"
-                    android:textColor="@color/gray" />
-            </LinearLayout>
         </LinearLayout>
-
-        <Button
-            android:id="@+id/propose_trade"
-            style="@style/WhiteButtonAppTheme"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="30dp"
-            android:onClick="proposeTrade"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:text="Propose Trade" />
     </LinearLayout>
 
 </ScrollView>
