--- a/android/WinIt/res/values/styles.xml
+++ b/android/WinIt/res/values/styles.xml
@@ -24,4 +24,9 @@
     <style name="ProfileSubSection">
         <item name="android:background">@drawable/rounded_rectangle</item>
     </style>
+    
+    <style name="ProfileButton">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">16sp</item>
+    </style>
 </resources>
